--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,17 @@
-body {
-  margin: 0;
-}
+@import "./utils/reset";
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./blocks/header";
+@import "./blocks/page";
+@import "./blocks/top-bar";
+@import "./blocks/icon";
+@import "./blocks/menu";
+@import "./blocks/nav";
+@import "./blocks/main";
+@import "./blocks/section-title";
+@import "./blocks/recommended";
+@import "./blocks/product";
+@import "./blocks/categories";
+@import "./blocks/separator";
+@import "./blocks/about";
+@import "./blocks/contacts";
